fixed scrollbar in homepage

--- a/app/javascript/stylesheets/partials/_scrolling.scss
+++ b/app/javascript/stylesheets/partials/_scrolling.scss
@@ -9,13 +9,8 @@
     opacity: 0;
   }
 
-  &:hover{
-    scrollbar-width: thin;/* Firefox 64 */
-
-    &::-webkit-scrollbar {
-      opacity: 1;
-      background-color: lighten($text-muted, 50%);
-    }
+  &::-webkit-scrollbar-track-piece {
+    background-color: transparent;
   }
 }
 
